# Rag-Law-finances

./: .env.example  .gitignore  Makefile  README.md  parser.py  pyproject.toml  requirements.txt
scripts/: setup_ollama.sh
src/: engine.py
src/configs/: settings.py
